Add timeout parameter to ShowError method
- Updated `ShowError` method in `ToastComponent.razor` to include a `timeout` parameter set to 10000 milliseconds, allowing error messages to be displayed longer.

--- a/LiveTest/LiveTest.Client/Components/ToastComponent.razor
+++ b/LiveTest/LiveTest.Client/Components/ToastComponent.razor
@@ -44,6 +44,6 @@
 
     }
     private async Task ShowError() {
-        await _service.ShowErrorAsync("My title", "My longer message description that takes up space");
+        await _service.ShowErrorAsync("My title", "My longer message description that takes up space", timeout: 10000);
     }
 }
