--- a/LiveTest/LiveTest.Client/Pages/Typeahead.razor
+++ b/LiveTest/LiveTest.Client/Pages/Typeahead.razor
@@ -1,10 +1,14 @@
 ﻿@page "/typeahead"
 @using TnTComponents
-@rendermode InteractiveAuto
+@rendermode InteractiveServer
 
 <h3>Typeahead</h3>
 
-<TnTTypeahead  ItemsLookupFunc="SearchFunc" Label="Typeahead" ItemSelectedCallback="@((Item item) => SelectedItems.Add(item))"/>
+<TnTTypeahead  ItemsLookupFunc="SearchFunc" Label="Typeahead" ItemSelectedCallback="@((Item item) => SelectedItems.Add(item))">
+    <ResultTemplate>
+        @context.Name @context.Email
+    </ResultTemplate>
+</TnTTypeahead>
 
 @foreach(var item in SelectedItems) {
     <span>
