--- a/TnTComponents/Form/TnTInputCurrency.razor
+++ b/TnTComponents/Form/TnTInputCurrency.razor
@@ -24,7 +24,8 @@
                onkeyup="TnTComponents.formatToCurrency(event)"
                cultureCode="@CultureCode"
                currencyCode="@CurrencyCode"
-               @bind-value="CurrentValueAsString"
+               @bind-value:get="@CurrentValueAsString"
+               @bind-value:set="(newValue) => OnInputAsync(newValue)"
                @bind-value:event="@(BindOnInput ? "oninput" : "onchange")"
                @onblur="@(EditContext is not null ? (FocusEventArgs args) => EditContext.NotifyFieldChanged(FieldIdentifier) : (FocusEventArgs _) => { })"
                @ref="Element" />
