--- a/TnTComponents/Form/TnTInputTextArea.razor
+++ b/TnTComponents/Form/TnTInputTextArea.razor
@@ -55,7 +55,8 @@
                   maxlength="@GetMaxLength()"
                   min="@GetMinValue()"
                   max="@GetMaxValue()"
-                  @bind-value="CurrentValueAsString"
+                  @bind-value:get="@CurrentValueAsString"
+                  @bind-value:set="(newValue) => OnInputAsync(newValue)"
                   @bind-value:event="@(BindOnInput ? "oninput" : "onchange")"
                   @onblur="@(EditContext is not null ? (FocusEventArgs args) => EditContext.NotifyFieldChanged(FieldIdentifier) : (FocusEventArgs _) => { })"
                   @ref="Element" />
