Enhance button and badge components for better UX
- Added multiple button sizes (XS to Largest) with icons and badges.
- Introduced progress indicators in new button rows.
- Removed `ITnTStyleable` interface and simplified `TnTBadge`.
- Reduced parameters in `CreateBadge` method for ease of use.
- Added new styles for badges in `TnTBadge.razor.scss`.
- Updated button styles in `TnTButton.razor.scss` for consistency.
- Enhanced interactive styles in `_interactable.scss`.

--- a/TnTComponents/Styles/_Variables/_interactable.scss
+++ b/TnTComponents/Styles/_Variables/_interactable.scss
@@ -11,7 +11,6 @@
 @mixin tnt-interactable {
     &.tnt-interactable:not(.tnt-disabled) {
         position: relative;
-        overflow: clip;
         cursor: pointer;
 
         &:before {
@@ -26,6 +25,7 @@
             transition-timing-function: ease-in-out;
             transition-duration: 200ms;
             transition-property: opacity, background-color;
+            border-radius: inherit;
         }
 
         @each $colorClass in colors.$tnt-all-color-classes {
@@ -56,7 +56,6 @@
 @mixin tnt-interactable($tint-color: null, $on-tint-color: null, $deep-ripple: true) {
     &.tnt-interactable:not(.tnt-disabled) {
         position: relative;
-        overflow: clip;
         cursor: pointer;
 
         &:before {
@@ -71,6 +70,7 @@
             transition-timing-function: ease-in-out;
             transition-duration: 200ms;
             transition-property: opacity, background-color;
+            border-radius: inherit;
         }
 
         @if $tint-color != null {
