--- a/LiveTest/LiveTest.Client/Pages/Buttons.razor
+++ b/LiveTest/LiveTest.Client/Pages/Buttons.razor
@@ -84,6 +84,198 @@
     </TnTColumn>
 </TnTRow>
 
+<TnTRow>
+    <TnTColumn S="12">
+        <TnTButton ButtonSize="@Size.XS" Appearance="@Appearance" Shape="@Shape" Disabled="Disabled" TextColor="@(Appearance == ButtonAppearance.Filled || Appearance == ButtonAppearance.Elevated ? TnTColor.OnPrimary : TnTColor.OnSurface)">
+            @if (StartIcon) {
+                <MaterialIcon Icon="@MaterialIcon.CloudySnowing" />
+            }
+            Smallest
+            @if (EndIcon) {
+                <MaterialIcon Icon="@MaterialIcon.SunnySnowing" />
+            }
+            <TnTBadge>
+                100
+            </TnTBadge>
+        </TnTButton>
+
+        <TnTButton ButtonSize="@Size.Small" Appearance="@Appearance" Shape="@Shape" Disabled="Disabled" TextColor="@(Appearance == ButtonAppearance.Filled || Appearance == ButtonAppearance.Elevated ? TnTColor.OnPrimary : TnTColor.OnSurface)">
+            @if (StartIcon) {
+                <MaterialIcon Icon="@MaterialIcon.CloudySnowing" />
+            }
+            Small
+            @if (EndIcon) {
+                <MaterialIcon Icon="@MaterialIcon.SunnySnowing" />
+            }
+            <TnTBadge>
+                100
+            </TnTBadge>
+        </TnTButton>
+
+        <TnTButton ButtonSize="@Size.Medium" Appearance="@Appearance" Shape="@Shape" Disabled="Disabled" TextColor="@(Appearance == ButtonAppearance.Filled || Appearance == ButtonAppearance.Elevated ? TnTColor.OnPrimary : TnTColor.OnSurface)">
+            @if (StartIcon) {
+                <MaterialIcon Icon="@MaterialIcon.CloudySnowing" />
+            }
+            Medium
+            @if (EndIcon) {
+                <MaterialIcon Icon="@MaterialIcon.SunnySnowing" />
+            }
+            <TnTBadge>
+                100
+            </TnTBadge>
+        </TnTButton>
+
+        <TnTButton ButtonSize="@Size.Large" Appearance="@Appearance" Shape="@Shape" Disabled="Disabled" TextColor="@(Appearance == ButtonAppearance.Filled || Appearance == ButtonAppearance.Elevated ? TnTColor.OnPrimary : TnTColor.OnSurface)">
+            @if (StartIcon) {
+                <MaterialIcon Icon="@MaterialIcon.CloudySnowing" />
+            }
+            Large
+            @if (EndIcon) {
+                <MaterialIcon Icon="@MaterialIcon.SunnySnowing" />
+            }
+            <TnTBadge>
+                100
+            </TnTBadge>
+        </TnTButton>
+
+        <TnTButton ButtonSize="@Size.Largest" Appearance="@Appearance" Shape="@Shape" Disabled="Disabled" TextColor="@(Appearance == ButtonAppearance.Filled || Appearance == ButtonAppearance.Elevated ? TnTColor.OnPrimary : TnTColor.OnSurface)">
+            @if (StartIcon) {
+                <MaterialIcon Icon="@MaterialIcon.CloudySnowing" />
+            }
+            Largest
+            @if (EndIcon) {
+                <MaterialIcon Icon="@MaterialIcon.SunnySnowing" />
+            }
+            <TnTBadge>
+                100
+            </TnTBadge>
+        </TnTButton>
+    </TnTColumn>
+</TnTRow>
+
+<TnTRow>
+    <TnTColumn S="12">
+        <TnTButton ButtonSize="@Size.XS" Appearance="@Appearance" Shape="@Shape" Disabled="Disabled" TextColor="@(Appearance == ButtonAppearance.Filled || Appearance == ButtonAppearance.Elevated ? TnTColor.OnPrimary : TnTColor.OnSurface)">
+            @if (StartIcon) {
+                <MaterialIcon Icon="@MaterialIcon.CloudySnowing" />
+            }
+            Smallest
+            @if (EndIcon) {
+                <MaterialIcon Icon="@MaterialIcon.SunnySnowing" />
+            }
+            <TnTProgressIndicator ProgressColor="TnTColor.Error" />
+        </TnTButton>
+
+        <TnTButton ButtonSize="@Size.Small" Appearance="@Appearance" Shape="@Shape" Disabled="Disabled" TextColor="@(Appearance == ButtonAppearance.Filled || Appearance == ButtonAppearance.Elevated ? TnTColor.OnPrimary : TnTColor.OnSurface)">
+            @if (StartIcon) {
+                <MaterialIcon Icon="@MaterialIcon.CloudySnowing" />
+            }
+            Small
+            @if (EndIcon) {
+                <MaterialIcon Icon="@MaterialIcon.SunnySnowing" />
+            }
+
+            <TnTProgressIndicator ProgressColor="TnTColor.Error" />
+        </TnTButton>
+
+        <TnTButton ButtonSize="@Size.Medium" Appearance="@Appearance" Shape="@Shape" Disabled="Disabled" TextColor="@(Appearance == ButtonAppearance.Filled || Appearance == ButtonAppearance.Elevated ? TnTColor.OnPrimary : TnTColor.OnSurface)">
+            @if (StartIcon) {
+                <MaterialIcon Icon="@MaterialIcon.CloudySnowing" />
+            }
+            Medium
+            @if (EndIcon) {
+                <MaterialIcon Icon="@MaterialIcon.SunnySnowing" />
+            }
+
+            <TnTProgressIndicator ProgressColor="TnTColor.Error" />
+        </TnTButton>
+
+        <TnTButton ButtonSize="@Size.Large" Appearance="@Appearance" Shape="@Shape" Disabled="Disabled" TextColor="@(Appearance == ButtonAppearance.Filled || Appearance == ButtonAppearance.Elevated ? TnTColor.OnPrimary : TnTColor.OnSurface)">
+            @if (StartIcon) {
+                <MaterialIcon Icon="@MaterialIcon.CloudySnowing" />
+            }
+            Large
+            @if (EndIcon) {
+                <MaterialIcon Icon="@MaterialIcon.SunnySnowing" />
+            }
+
+            <TnTProgressIndicator ProgressColor="TnTColor.Error" />
+        </TnTButton>
+
+        <TnTButton ButtonSize="@Size.Largest" Appearance="@Appearance" Shape="@Shape" Disabled="Disabled" TextColor="@(Appearance == ButtonAppearance.Filled || Appearance == ButtonAppearance.Elevated ? TnTColor.OnPrimary : TnTColor.OnSurface)">
+            @if (StartIcon) {
+                <MaterialIcon Icon="@MaterialIcon.CloudySnowing" />
+            }
+            Largest
+            @if (EndIcon) {
+                <MaterialIcon Icon="@MaterialIcon.SunnySnowing" />
+            }
+
+            <TnTProgressIndicator ProgressColor="TnTColor.Error" />
+        </TnTButton>
+    </TnTColumn>
+</TnTRow>
+
+
+<TnTRow>
+    <TnTColumn S="12">
+        <TnTButton ButtonSize="@Size.XS" Appearance="@Appearance" Shape="@Shape" Disabled="Disabled" TextColor="@(Appearance == ButtonAppearance.Filled || Appearance == ButtonAppearance.Elevated ? TnTColor.OnPrimary : TnTColor.OnSurface)">
+            @if (StartIcon) {
+                <MaterialIcon Icon="@MaterialIcon.CloudySnowing" />
+            }
+            Smallest
+            @if (EndIcon) {
+                <MaterialIcon Icon="@MaterialIcon.SunnySnowing" />
+            }
+            <TnTProgressIndicator ProgressColor="TnTColor.Error" Appearance="ProgressAppearance.Linear" />
+        </TnTButton>
+
+        <TnTButton ButtonSize="@Size.Small" Appearance="@Appearance" Shape="@Shape" Disabled="Disabled" TextColor="@(Appearance == ButtonAppearance.Filled || Appearance == ButtonAppearance.Elevated ? TnTColor.OnPrimary : TnTColor.OnSurface)">
+            @if (StartIcon) {
+                <MaterialIcon Icon="@MaterialIcon.CloudySnowing" />
+            }
+            Small
+            @if (EndIcon) {
+                <MaterialIcon Icon="@MaterialIcon.SunnySnowing" />
+            }
+            <TnTProgressIndicator ProgressColor="TnTColor.Error" Appearance="ProgressAppearance.Linear" />
+        </TnTButton>
+
+        <TnTButton ButtonSize="@Size.Medium" Appearance="@Appearance" Shape="@Shape" Disabled="Disabled" TextColor="@(Appearance == ButtonAppearance.Filled || Appearance == ButtonAppearance.Elevated ? TnTColor.OnPrimary : TnTColor.OnSurface)">
+            @if (StartIcon) {
+                <MaterialIcon Icon="@MaterialIcon.CloudySnowing" />
+            }
+            Medium
+            @if (EndIcon) {
+                <MaterialIcon Icon="@MaterialIcon.SunnySnowing" />
+            }
+            <TnTProgressIndicator ProgressColor="TnTColor.Error" Appearance="ProgressAppearance.Linear" />
+        </TnTButton>
+
+        <TnTButton ButtonSize="@Size.Large" Appearance="@Appearance" Shape="@Shape" Disabled="Disabled" TextColor="@(Appearance == ButtonAppearance.Filled || Appearance == ButtonAppearance.Elevated ? TnTColor.OnPrimary : TnTColor.OnSurface)">
+            @if (StartIcon) {
+                <MaterialIcon Icon="@MaterialIcon.CloudySnowing" />
+            }
+            Large
+            @if (EndIcon) {
+                <MaterialIcon Icon="@MaterialIcon.SunnySnowing" />
+            }
+            <TnTProgressIndicator ProgressColor="TnTColor.Error" Appearance="ProgressAppearance.Linear" />
+        </TnTButton>
+
+        <TnTButton ButtonSize="@Size.Largest" Appearance="@Appearance" Shape="@Shape" Disabled="Disabled" TextColor="@(Appearance == ButtonAppearance.Filled || Appearance == ButtonAppearance.Elevated ? TnTColor.OnPrimary : TnTColor.OnSurface)">
+            @if (StartIcon) {
+                <MaterialIcon Icon="@MaterialIcon.CloudySnowing" />
+            }
+            Largest
+            @if (EndIcon) {
+                <MaterialIcon Icon="@MaterialIcon.SunnySnowing" />
+            }
+            <TnTProgressIndicator ProgressColor="TnTColor.Error" Appearance="ProgressAppearance.Linear" />
+        </TnTButton>
+    </TnTColumn>
+</TnTRow>
+
 
 @code {
 
