--- a/TnTComponents/Buttons/TnTButton.razor.scss
+++ b/TnTComponents/Buttons/TnTButton.razor.scss
@@ -50,6 +50,7 @@ $on-tint-color: var(--tnt-button-on-tint-color);
             border: none;
             box-sizing: border-box;
             transition: 250ms ease-in-out;
+            position: relative;
 
             &.tnt-disabled {
                 cursor: not-allowed;
@@ -93,6 +94,7 @@ $on-tint-color: var(--tnt-button-on-tint-color);
     box-sizing: border-box;
     padding: 8px;
     margin: 4px;
+    position: relative;
 
     &.tnt-text, &.tnt-outlined {
         background-color: transparent;
@@ -137,8 +139,20 @@ $on-tint-color: var(--tnt-button-on-tint-color);
                 border-radius: 12px;
             }
 
-            ::deep .tnt-icon {
-                font-size: 20px;
+            ::deep {
+                .tnt-icon {
+                    font-size: 20px;
+                }
+
+                .tnt-badge {
+                    top: -10px;
+                    right: -20px;
+                }
+
+                progress.tnt-components {
+                    height: 32px;
+                    width: 32px;
+                }
             }
         }
     }
@@ -154,8 +168,20 @@ $on-tint-color: var(--tnt-button-on-tint-color);
                 border-radius: 12px;
             }
 
-            ::deep .tnt-icon {
-                font-size: 20px;
+            ::deep {
+                .tnt-icon {
+                    font-size: 20px;
+                }
+
+                .tnt-badge {
+                    top: -10px;
+                    right: -16px;
+                }
+
+                progress.tnt-components {
+                    height: 40px;
+                    width: 40px;
+                }
             }
         }
     }
@@ -171,8 +197,20 @@ $on-tint-color: var(--tnt-button-on-tint-color);
             border-radius: 16px;
         }
 
-        ::deep .tnt-icon {
-            font-size: 24px;
+        ::deep {
+            .tnt-icon {
+                font-size: 24px;
+            }
+
+            .tnt-badge {
+                top: -10px;
+                right: -10px;
+            }
+
+            progress.tnt-components {
+                height: 56px;
+                width: 56px;
+            }
         }
     }
 
@@ -187,8 +225,20 @@ $on-tint-color: var(--tnt-button-on-tint-color);
             border-radius: 28px;
         }
 
-        ::deep .tnt-icon {
-            font-size: 32px;
+        ::deep {
+            .tnt-icon {
+                font-size: 32px;
+            }
+
+            .tnt-badge {
+                top: -10px;
+                right: -6px;
+            }
+
+            progress.tnt-components {
+                height: 96px;
+                width: 96px;
+            }
         }
     }
 
@@ -199,12 +249,35 @@ $on-tint-color: var(--tnt-button-on-tint-color);
         height: 136px;
         gap: 16px;
 
-        &.tnt-button-square {
-            border-radius: 28px;
+
+
+        ::deep {
+
+            .tnt-icon {
+                font-size: 40px;
+            }
+
+            .tnt-badge {
+                top: 0;
+                right: 0;
+            }
+
+            progress.tnt-components {
+                height: 136px;
+                width: 136px;
+            }
         }
 
-        ::deep .tnt-icon {
-            font-size: 40px;
+        &.tnt-button-square {
+            border-radius: 28px;
+
+            ::deep {
+
+                .tnt-badge {
+                    top: -10px;
+                    right: -10px;
+                }
+            }
         }
     }
 
@@ -242,6 +315,15 @@ $on-tint-color: var(--tnt-button-on-tint-color);
 
         .tnt-icon {
             pointer-events: none;
+        }
+
+        progress.tnt-components {
+            position: absolute !important;
+
+            &.tnt-progress-linear {
+                height: 4px !important;
+                width: calc(100% - 8px) !important;
+            }
         }
     }
 }
