--- a/LiveTest/LiveTest.Client/Pages/ImageButtons.razor
+++ b/LiveTest/LiveTest.Client/Pages/ImageButtons.razor
@@ -42,7 +42,19 @@
         <TnTImageButton ButtonSize="@Size.Largest" ImageButtonAppearance="@ImageButtonAppearance" Appearance="@Appearance" Shape="@Shape" Disabled="Disabled" TextColor="@(Appearance == ButtonAppearance.Filled || Appearance == ButtonAppearance.Elevated ? TnTColor.OnPrimary : TnTColor.OnSurface)" Icon="@MaterialIcon.Edit" />
     </TnTColumn>
 </TnTRow>
+<TnTRow>
+    <TnTColumn S="12">
+        <TnTImageButton Badge="@TnTBadge.CreateBadge("100")" ButtonSize="@Size.XS" ImageButtonAppearance="@ImageButtonAppearance" Appearance="@Appearance" Shape="@Shape" Disabled="Disabled" TextColor="@(Appearance == ButtonAppearance.Filled || Appearance == ButtonAppearance.Elevated ? TnTColor.OnPrimary : TnTColor.OnSurface)" Icon="@MaterialIcon.Edit" />
 
+        <TnTImageButton Badge="@TnTBadge.CreateBadge("100")" ButtonSize="@Size.Small" ImageButtonAppearance="@ImageButtonAppearance" Appearance="@Appearance" Shape="@Shape" Disabled="Disabled" TextColor="@(Appearance == ButtonAppearance.Filled || Appearance == ButtonAppearance.Elevated ? TnTColor.OnPrimary : TnTColor.OnSurface)" Icon="@MaterialIcon.Edit" />
+
+        <TnTImageButton Badge="@TnTBadge.CreateBadge("100")" ButtonSize="@Size.Medium" ImageButtonAppearance="@ImageButtonAppearance" Appearance="@Appearance" Shape="@Shape" Disabled="Disabled" TextColor="@(Appearance == ButtonAppearance.Filled || Appearance == ButtonAppearance.Elevated ? TnTColor.OnPrimary : TnTColor.OnSurface)" Icon="@MaterialIcon.Edit" />
+
+        <TnTImageButton Badge="@TnTBadge.CreateBadge("100")" ButtonSize="@Size.Large" ImageButtonAppearance="@ImageButtonAppearance" Appearance="@Appearance" Shape="@Shape" Disabled="Disabled" TextColor="@(Appearance == ButtonAppearance.Filled || Appearance == ButtonAppearance.Elevated ? TnTColor.OnPrimary : TnTColor.OnSurface)" Icon="@MaterialIcon.Edit" />
+
+        <TnTImageButton Badge="@TnTBadge.CreateBadge("100")" ButtonSize="@Size.Largest" ImageButtonAppearance="@ImageButtonAppearance" Appearance="@Appearance" Shape="@Shape" Disabled="Disabled" TextColor="@(Appearance == ButtonAppearance.Filled || Appearance == ButtonAppearance.Elevated ? TnTColor.OnPrimary : TnTColor.OnSurface)" Icon="@MaterialIcon.Edit" />
+    </TnTColumn>
+</TnTRow>
 
 @code {
 
