--- a/TnTComponents/Buttons/TnTImageButton.razor.scss
+++ b/TnTComponents/Buttons/TnTImageButton.razor.scss
@@ -150,8 +150,20 @@ $on-tint-color: var(--tnt-button-on-tint-color);
                 border-radius: 12px;
             }
 
-            ::deep .tnt-icon {
-                font-size: 20px;
+            ::deep {
+                .tnt-icon {
+                    font-size: 20px;
+                }
+
+                .tnt-badge {
+                    top: -10px;
+                    right: -20px;
+                }
+
+                progress.tnt-components {
+                    height: 32px;
+                    width: 32px;
+                }
             }
         }
     }
@@ -179,8 +191,20 @@ $on-tint-color: var(--tnt-button-on-tint-color);
                 border-radius: 12px;
             }
 
-            ::deep .tnt-icon {
-                font-size: 24px;
+            ::deep {
+                .tnt-icon {
+                    font-size: 24px;
+                }
+
+                .tnt-badge {
+                    top: -10px;
+                    right: -16px;
+                }
+
+                progress.tnt-components {
+                    height: 40px;
+                    width: 40px;
+                }
             }
         }
     }
@@ -207,8 +231,20 @@ $on-tint-color: var(--tnt-button-on-tint-color);
             border-radius: 16px;
         }
 
-        ::deep .tnt-icon {
-            font-size: 24px;
+        ::deep {
+            .tnt-icon {
+                font-size: 24px;
+            }
+
+            .tnt-badge {
+                top: -10px;
+                right: -10px;
+            }
+
+            progress.tnt-components {
+                height: 56px;
+                width: 56px;
+            }
         }
     }
 
@@ -234,8 +270,20 @@ $on-tint-color: var(--tnt-button-on-tint-color);
             border-radius: 28px;
         }
 
-        ::deep .tnt-icon {
-            font-size: 32px;
+        ::deep {
+            .tnt-icon {
+                font-size: 32px;
+            }
+
+            .tnt-badge {
+                top: -10px;
+                right: -6px;
+            }
+
+            progress.tnt-components {
+                height: 96px;
+                width: 96px;
+            }
         }
     }
 
@@ -261,8 +309,21 @@ $on-tint-color: var(--tnt-button-on-tint-color);
             border-radius: 28px;
         }
 
-        ::deep .tnt-icon {
-            font-size: 40px;
+        ::deep {
+
+            .tnt-icon {
+                font-size: 40px;
+            }
+
+            .tnt-badge {
+                top: 0;
+                right: 0;
+            }
+
+            progress.tnt-components {
+                height: 136px;
+                width: 136px;
+            }
         }
     }
 
@@ -300,6 +361,15 @@ $on-tint-color: var(--tnt-button-on-tint-color);
 
         .tnt-icon {
             pointer-events: none;
+        }
+
+        progress.tnt-components {
+            position: absolute !important;
+
+            &.tnt-progress-linear {
+                height: 4px !important;
+                width: calc(100% - 8px) !important;
+            }
         }
     }
 }
