--- a/LiveTest/LiveTest/Components/App.razor
+++ b/LiveTest/LiveTest/Components/App.razor
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="LiveTest.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+    <TnTComponents.TnTHeadDependencies />
     <HeadOutlet @rendermode="InteractiveAuto"/>
 </head>
 
